// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getNotificationContentJssStyle() should return correct JssStyle 1`] = `
{
  "@media(min-width:760px)": {
    "marginLeft": "-8px",
  },
  "display": "grid",
  "gap": "4px",
  "maxWidth": "50rem",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle 1`] = `
{
  "@media(max-width:759px)": {
    "display": "none",
  },
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: error and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#FFE2E4",
  "borderRadius": "4px",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: error and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#3A0F0F",
  "borderRadius": "4px",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#D3E1FF",
  "borderRadius": "4px",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr) auto",
  },
  "background": "#D3E1FF",
  "borderRadius": "4px",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr) auto",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: false 3`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#04294E",
  "borderRadius": "4px",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: true 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr) auto",
  },
  "background": "#D3E1FF",
  "borderRadius": "4px",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: true 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr) auto auto",
  },
  "background": "#D3E1FF",
  "borderRadius": "4px",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr) auto",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: neutral and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#D3E1FF",
  "borderRadius": "4px",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: neutral and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#04294E",
  "borderRadius": "4px",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: success and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#E4FFEC",
  "borderRadius": "4px",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: success and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#003320",
  "borderRadius": "4px",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: warning and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#FFF4D2",
  "borderRadius": "4px",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: warning and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "#362B0A",
  "borderRadius": "4px",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;
